[project]
name = "letsjson"
version = "0.1.0"
description = "Generate JSON that strictly matches a schema with automatic retries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsjson"]
